// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Apigateway mappings > Should map AWS::ApiGatewayV2::Authorizer 1`] = `
"{
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_apigatewayv2_authorizer": {
      "resource_22C949BF": {
        "api_id": "api-id",
        "authorizer_credentials_arn": "authorizer-credentials-arn",
        "authorizer_payload_format_version": "authorizer-payload-format-version",
        "authorizer_result_ttl_in_seconds": 60,
        "authorizer_type": "authorizer-type",
        "authorizer_uri": "authorizer-uri",
        "enable_simple_responses": true,
        "identity_sources": [
          "identity-source"
        ],
        "jwt_configuration": {
          "audience": [
            "audience"
          ],
          "issuer": "issuer"
        },
        "name": "name"
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.85.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "\${aws_apigatewayv2_authorizer.resource_22C949BF.id}",
      "type": "string"
    }
  }
}"
`;

exports[`Apigateway mappings > Should map AWS::ApiGatewayV2::DomainName 1`] = `
"{
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_apigatewayv2_domain_name": {
      "resource_22C949BF": {
        "domain_name": "domain-name",
        "domain_name_configuration": {
          "certificate_arn": "certificate-arn",
          "endpoint_type": "REGIONAL",
          "ownership_verification_certificate_arn": "ownership-verification-certificate-arn",
          "security_policy": "TLS_1_2"
        },
        "mutual_tls_authentication": {
          "truststore_uri": "truststore-uri",
          "truststore_version": "truststore-version"
        },
        "tags": {
          "tag": "tag-value"
        }
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.85.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "\${join(\\"\\", [aws_apigatewayv2_domain_name.resource_22C949BF.domain_name_configuration[0].target_domain_name, \\",\\", aws_apigatewayv2_domain_name.resource_22C949BF.domain_name_configuration[0].hosted_zone_id])}",
      "type": "string"
    }
  }
}"
`;

exports[`Apigateway mappings > Should map AWS::ApiGatewayV2::Integration 1`] = `
"{
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_apigatewayv2_integration": {
      "resource_22C949BF": {
        "api_id": "api-id",
        "connection_id": "connection-id",
        "connection_type": "connection-type",
        "content_handling_strategy": "content-handling-strategy",
        "credentials_arn": "credentials-arn",
        "description": "description",
        "integration_method": "integration-method",
        "integration_subtype": "integration-subtype",
        "integration_type": "integration-type",
        "integration_uri": "integration-uri",
        "passthrough_behavior": "passthrough-behavior",
        "payload_format_version": "payload-format-version",
        "request_parameters": {
          "request-parameter": "request-parameter-value"
        },
        "request_templates": {
          "request-template": "request-template-value"
        },
        "response_parameters": [
          {
            "mappings": {
              "source": "destination"
            },
            "status_code": "200"
          }
        ],
        "template_selection_expression": "template-selection-expression",
        "timeout_milliseconds": 60,
        "tls_config": {
          "server_name_to_verify": "server-name-to-verify"
        }
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.85.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "\${aws_apigatewayv2_integration.resource_22C949BF.id}",
      "type": "string"
    }
  }
}"
`;

exports[`Apigateway mappings > Should map AWS::ApiGatewayV2::Route 1`] = `
"{
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_apigatewayv2_route": {
      "resource_22C949BF": {
        "api_id": "api-id",
        "api_key_required": true,
        "authorization_scopes": [
          "authorization-scope"
        ],
        "authorization_type": "authorization-type",
        "authorizer_id": "authorizer-id",
        "model_selection_expression": "model-selection-expression",
        "operation_name": "operation-name",
        "request_models": {
          "request-model": "request-model-value"
        },
        "request_parameter": [
          {
            "request_parameter_key": "request-parameter",
            "required": false
          }
        ],
        "route_key": "route-key",
        "route_response_selection_expression": "route-response-selection-expression",
        "target": "target"
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.85.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "\${aws_apigatewayv2_route.resource_22C949BF.id}",
      "type": "string"
    }
  }
}"
`;

exports[`Apigateway mappings > Should map AWS::ApiGatewayV2::Stage 1`] = `
"{
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_apigatewayv2_stage": {
      "resource_22C949BF": {
        "access_log_settings": {
          "destination_arn": "destination-arn",
          "format": "format"
        },
        "api_id": "api-id",
        "auto_deploy": true,
        "client_certificate_id": "client-certificate-id",
        "default_route_settings": {
          "data_trace_enabled": true,
          "detailed_metrics_enabled": true,
          "logging_level": "logging-level",
          "throttling_burst_limit": 60,
          "throttling_rate_limit": 60
        },
        "deployment_id": "deployment-id",
        "description": "description",
        "name": "stage-name",
        "route_settings": [
          {
            "data_trace_enabled": true,
            "detailed_metrics_enabled": true,
            "logging_level": "logging-level",
            "route_key": "route-key",
            "throttling_burst_limit": 60,
            "throttling_rate_limit": 60
          }
        ],
        "stage_variables": {
          "stage-variable": "stage-variable-value"
        },
        "tags": {
          "tag": "tag-value"
        }
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.85.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "\${aws_apigatewayv2_stage.resource_22C949BF.id}",
      "type": "string"
    }
  }
}"
`;

exports[`Apigateway mappings > should map AWS::ApiGateway::Account 1`] = `
"{
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_api_gateway_account": {
      "resource_22C949BF": {
        "cloudwatch_role_arn": "cw-role-arn"
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.85.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "\${aws_api_gateway_account.resource_22C949BF.id}",
      "type": "string"
    }
  }
}"
`;

exports[`Apigateway mappings > should map AWS::ApiGateway::BasePathMapping 1`] = `
"{
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_api_gateway_base_path_mapping": {
      "resource_22C949BF": {
        "api_id": "rest-api-id",
        "base_path": "base-path",
        "domain_name": "domain-name",
        "id": "id",
        "stage_name": "stage"
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.85.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "",
      "type": "string"
    }
  }
}"
`;

exports[`Apigateway mappings > should map AWS::ApiGateway::Deployment 1`] = `
"{
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_cloudcontrolapi_resource": {
      "resource_22C949BF": {
        "desired_state": "{\\"DeploymentCanarySettings\\":{\\"PercentTraffic\\":50,\\"StageVariableOverrides\\":{\\"stage-variable\\":\\"stage-variable-value\\"},\\"UseStageCache\\":true},\\"Description\\":\\"description\\",\\"RestApiId\\":\\"rest-api-id\\",\\"StageDescription\\":{\\"AccessLogSetting\\":{\\"DestinationArn\\":\\"destination-arn\\",\\"Format\\":\\"format\\"},\\"CacheClusterEnabled\\":true,\\"CacheClusterSize\\":\\"cache-cluster-size\\",\\"CacheDataEncrypted\\":true,\\"CacheTtlInSeconds\\":60,\\"CachingEnabled\\":true,\\"CanarySetting\\":{\\"PercentTraffic\\":50,\\"StageVariableOverrides\\":{\\"stage-variable\\":\\"stage-variable-value\\"},\\"UseStageCache\\":true},\\"ClientCertificateId\\":\\"client-certificate-id\\",\\"DataTraceEnabled\\":true,\\"Description\\":\\"description\\",\\"DocumentationVersion\\":\\"documentation-version\\",\\"LoggingLevel\\":\\"logging-level\\",\\"MethodSettings\\":[{\\"CacheDataEncrypted\\":true,\\"CacheTtlInSeconds\\":60,\\"CachingEnabled\\":true,\\"DataTraceEnabled\\":true,\\"HttpMethod\\":\\"http-method\\",\\"LoggingLevel\\":\\"logging-level\\",\\"MetricsEnabled\\":true,\\"ResourcePath\\":\\"resource-path\\",\\"ThrottlingBurstLimit\\":60,\\"ThrottlingRateLimit\\":60}],\\"MetricsEnabled\\":true,\\"Tags\\":[{\\"Key\\":\\"tag\\",\\"Value\\":\\"tag-value\\"}],\\"ThrottlingBurstLimit\\":60,\\"ThrottlingRateLimit\\":60,\\"TracingEnabled\\":true,\\"Variables\\":{\\"stage-variable\\":\\"stage-variable-value\\"}},\\"StageName\\":\\"stage-name\\"}",
        "type_name": "AWS::ApiGateway::Deployment"
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.85.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "\${jsondecode(aws_cloudcontrolapi_resource.resource_22C949BF.properties).DeploymentId}",
      "type": "string"
    }
  }
}"
`;

exports[`Apigateway mappings > should map AWS::ApiGateway::Stage 1`] = `
"{
  "provider": {
    "aws": [
      {
        "alias": "us_east_1",
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_cloudcontrolapi_resource": {
      "resource_22C949BF": {
        "desired_state": "{\\"AccessLogSetting\\":{\\"DestinationArn\\":\\"destination-arn\\",\\"Format\\":\\"format\\"},\\"CacheClusterEnabled\\":true,\\"CacheClusterSize\\":\\"cache-cluster-size\\",\\"CanarySetting\\":{\\"DeploymentId\\":\\"deployment-id\\",\\"PercentTraffic\\":50,\\"StageVariableOverrides\\":{\\"stage-variable\\":\\"stage-variable-value\\"},\\"UseStageCache\\":true},\\"ClientCertificateId\\":\\"client-certificate-id\\",\\"DeploymentId\\":\\"deployment-id\\",\\"Description\\":\\"description\\",\\"DocumentationVersion\\":\\"documentation-version\\",\\"RestApiId\\":\\"rest-api-id\\",\\"StageName\\":\\"stage-name\\",\\"Tags\\":[{\\"Key\\":\\"tag\\",\\"Value\\":\\"tag-value\\"}],\\"TracingEnabled\\":true,\\"Variables\\":{\\"stage-variable\\":\\"stage-variable-value\\"}}",
        "type_name": "AWS::ApiGateway::Stage"
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/terraform.test-stack.tfstate"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.85.0"
      }
    }
  },
  "variable": {
    "resource_refs_CDA17697": {
      "default": "",
      "type": "string"
    }
  }
}"
`;
